[package]
name = "soundvault"
version = "0.1.0"
edition = "2024"
authors = ["Stéphane Mourey<mail@stephanemourey.fr>"]
description = "SoundVault is a Rust library that allows you to organize your local sound library, add your own audio files, search and download audio files from Freesound.org and provide seamless access for playback in your applications."
homepage = "https://github.com/taophp/soundvault"
repository = "https://github.com/taophp/soundvault"
license = "LGPL-3.0-or-later"
keywords = ["audio", "sound", "freesound", "librairy"]
categories = ["multimedia::audio"]

[dependencies]
anyhow = "1.0.97"
freesound-rs = "0.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "sqlite"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
